[package]
name = "ykbf"
version = "0.1.0"
authors = ["Laurence Tratt <laurie@tratt.net>"]
license = "Apache-2.0/MIT"
edition = "2018"

[[test]]
name = "lang_tests"
path = "lang_tests/run.rs"
harness = false

[features]
hw-tracer = ["ykrt"]

[dependencies]
getopts = "0.2.21"
libc = "0.2.84"
ykrt = { path = "./yk/ykrt", optional=true } # This is a symlink created by our cargo wrapper.

[dev-dependencies]
lazy_static = "1.4.0"
lang_tester = "0.3"
regex = "1.4.3"
